# SpiritAgent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.cursor/: BUGBOT.md
.github/: copilot-instructions.md
.spirit/: rule.md
apps/cli/: Cargo.toml  NOTICE.md
apps/cli/about/: NOTICE.hbs
apps/cli/locales/: en.yml  zh-CN.yml
apps/cli/src/: adapters.rs  ask_questions.rs  bedrock_mantle.rs  chat_store.rs  chat_timeline.rs  cli.rs  conversation_select.rs  fork.rs  hooks.rs  hooks_types.rs  host_runtime.rs  lib.rs  llm_types.rs  locale.rs  logging.rs  main.rs  mcp.rs  mcp_manager.rs  mcp_types.rs  model_catalog_display.rs  model_provider_presets.rs  model_registry.rs  openai_models_list.rs  plan.rs  ports.rs  rewind.rs  rules.rs  runtime_handle.rs  session.rs  skills.rs  subagent_display.rs  test_support.rs  tool_runtime.rs  ts_bridge.rs  tui.rs  ui.rs  vertex_models_list.rs  view.rs  word_wrap.rs
apps/cli/src/shell/: ask_questions.rs  bottom_form.rs  file_reference.rs  manual_shell.rs  mod.rs  slash.rs  workspace_trust.rs
apps/cli/src/ts_bridge/: archive.rs  constants.rs  host_dispatch.rs  mod.rs  tool_ui.rs
apps/cli/src/ts_bridge/json_rpc/: framing.rs  mod.rs  spawn.rs
apps/cli/src/ts_bridge/runtime/: approval.rs  config.rs  export.rs  extensions.rs  lifecycle.rs  mcp.rs  metadata.rs  mod.rs  rewind.rs  session.rs  subagent.rs
apps/cli/src/ts_bridge/sync/: events.rs  mod.rs  snapshot.rs  subagent_push.rs
apps/cli/src/ts_bridge/tests/: integration.rs  mod.rs
apps/cli/src/ts_bridge/transport/: config.rs  keys.rs  mod.rs  provider.rs
apps/cli/src/ts_bridge/types/: bridge.rs  cli_public.rs  mod.rs
apps/cli/src/tui/: commands.rs  conversation.rs  forms.rs  hooks_actions.rs  host_actions.rs  image_paths.rs  input.rs  marketplace.rs  mcp_actions.rs  pickers.rs  projection.rs  runtime_events.rs  subagent.rs  workspace_trust.rs
apps/cli/src/ui/: conversation.rs  forms.rs  input.rs  markdown.rs  marketplace.rs  pickers.rs  subagent.rs  tests.rs  text.rs  theme.rs
docs/: README_zh-CN.md  desktop-localization-audit.md  ts-core-migration.md  ts-mcp-sdk-execution-plan.md
scripts/: eval-compare.mjs  (+2 more)
spirit-agent/: Cargo.toml  NOTICE.md  about.toml
spirit-agent/.cargo/: config.toml
spirit-agent/.github/: copilot-instructions.md
spirit-agent/locales/: en.yml
spirit-agent/src/: adapters.rs  chat_store.rs  cli.rs  conversation_select.rs  lib.rs  llm_client.rs  logging.rs  main.rs  mcp.rs  mcp_manager.rs  model_registry.rs  ports.rs  runtime.rs  runtime_handle.rs  session.rs  tool_runtime.rs  ts_bridge.rs  tui.rs  ui.rs  view.rs  word_wrap.rs
spirit-agent/src/shell/: bottom_form.rs  file_reference.rs  manual_shell.rs  mod.rs  slash.rs
(+874 files in other folders)
