[package]
name = "spirit-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
rpassword = "7"
unicode-width = "0.2"
comrak = "0.36"
encoding_rs = "0.8"
base64 = "0.22"
