[package]
name = "spirit-agent"
version = "0.1.0"
edition = "2024"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:comrak", "dep:unicode-width"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
rpassword = "7"
unicode-width = { version = "0.2", optional = true }
comrak = { version = "0.36", optional = true }
encoding_rs = "0.8"
base64 = "0.22"
