[package]
name = "spirit-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:comrak", "dep:unicode-width", "dep:arboard", "dep:rust-i18n"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "process", "io-util", "time"] }
anyhow = "1"
ratatui = { version = "0.29", optional = true, features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
html2text = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
rpassword = "7"
unicode-width = { version = "0.2", optional = true }
comrak = { version = "0.36", optional = true }
arboard = { version = "3", optional = true }
rust-i18n = { version = "3", optional = true }
encoding_rs = "0.8"
base64 = "0.22"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Input_KeyboardAndMouse"] }
winreg = "0.52"

[[bin]]
name = "spirit"
path = "src/main.rs"
required-features = ["tui"]
